@@ -40,6 +40,14 @@ alias ~="cd ~"
 
 alias -- -="cd -"
 
+
+### Env settings
+export SBT_OPTS="-Xmx2G -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=2G -Xss2M  -Duser.timezone=GMT"
+
+### Zsh specific settings
+DISABLE_CORRECTION="true"
+ZSH_THEME="jonathan"
+
 -------------
 
 
